--- a/recipes/ncbi-cxx-toolkit-public/all/dependencies/requirements-27.0.yml
+++ b/recipes/ncbi-cxx-toolkit-public/all/dependencies/requirements-27.0.yml
@@ -2,7 +2,7 @@ version: 27.0
 #----------------------------------------------------------------------------
 requirements:
     BACKWARD:   ["backward-cpp/1.6"]
-    UNWIND:     ["libunwind/1.6.2", "xz_utils/5.4.4"]
+    UNWIND:     ["libunwind/1.6.2"]
     BerkeleyDB: ["libdb/5.3.28"]
     BZ2:        ["bzip2/1.0.8"]
     GIF:        ["giflib/5.2.1"]
@@ -16,7 +16,7 @@ requirements:
     PROTOBUF:   []
     SQLITE3:    ["sqlite3/3.41.1"]
     TIFF:       ["libtiff/4.4.0"]
-    XML:        ["libxml2/2.11.4"]
+    XML:        ["libxml2/2.11.6"]
     XSLT:       ["libxslt/1.1.34"]
     UV:         ["libuv/1.44.2"]
     Z:          ["zlib/1.2.13"]
